# minecraftvulkanclone

./: .gitignore  CMakeLists.txt  build.bash  compileShaders.bash
Headers/: CommonIncludes.hpp  Game.hpp  Macros.hpp  Vulkan.hpp  Window.hpp
Headers/Vulkan/: Functions.hpp  IndexBuffer.hpp  Texture.hpp  Types.hpp  VertexBuffer.hpp
Libraries/: CMakeLists.txt
Libraries/stb/: CMakeLists.txt
Shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
Sources/: Game.cpp  Main.cpp  Vulkan.cpp  Window.cpp
Sources/Vulkan/: Functions.cpp  IndexBuffer.cpp  Texture.cpp  VertexBuffer.cpp
